# bintang-advertising-backend

./: .dockerignore  .gitignore  AUDIT_PERBAIKAN.md  Dockerfile  PRODUCTION_READINESS_CHECKLIST.md  README.md  check_and_heal.py  copy_files.py  create_owner.py  create_production_accounts.py  generate_stock_report.py  hr_attendance_schedule.json  laporan_keamanan.html  main.py  makemigrations_log.txt  pyproject.toml  reset_data.py  reset_db.py  run_audit.sh  seed_dummy_inventory.py
api/: admin.py  customer_models.py  customer_serializers.py  customer_views.py  executive_dashboard.py  executive_dashboard_views.py  export_views.py  finance_models.py  finance_serializers.py  finance_views.py  marketing_models.py  marketing_serializers.py  marketing_views.py  models.py  pagination.py  permissions.py  pos_models.py  pos_serializers.py  pos_services.py  pos_settings.py  pos_views.py  product_models.py  product_serializers.py  product_views.py  production_costing.py  production_models.py  production_serializers.py  production_views.py  promo_engine.py  report_views.py  serializers.py  spk.py  stock_fifo.py  tasks.py  tests.py  tests_customer_import.py  tests_executive_dashboard.py  tests_import.py  tests_marketing_promo_qty.py  tests_order_filter.py  (+15 more)
core/: settings.py  urls.py
hr/: admin.py  apps.py  finance_urls.py  models.py  serializers.py  tests.py  urls.py  views.py
scripts/: check_and_heal.py  create_owner.py  create_production_accounts.py  generate_pdf.py  generate_stock_report.py  migrate_flask_db.py  migrate_profiles.py  read_excel.py  reset_data.py  reset_db.py  (+2 more)
(+113 files in other folders)
