[project]
name = "bintang-django-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.3.2",
    "django<5.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "mysqlclient>=2.2.8",
    "openai>=2.37.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
]
