[project]
name = "bintang-django-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.3.2",
    "django<5.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "mysqlclient>=2.2.8",
    "openai>=2.37.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "pillow>=10.2.0",
    "django-storages[s3]>=1.14.0",
    "boto3>=1.34.0",
    "daphne>=4.1.2",
    "sentry-sdk[django]>=2.0.0",
    "redis>=5.0.0",
    "django-redis>=6.0.0",
    "channels-redis>=4.3.0",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.12",
]
